--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "server": "json-server db.json",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "classnames": "^2.5.1",
+    "json-server": "^1.0.0-beta.3",
+    "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "sass": "^1.92.1",
+    "typescript": "^5"
   }
 }
