--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^1.0.0-beta.3",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
